# age-nyan-key

./: .gitignore  Cargo.toml  README.md  deploy.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
assets/: index-27NYRmxv.js  index-ByZrvKYa.js  index-C35oVT1y.js  index-CI_oUtlL.js  nice_key_gen_bg-BwuRI9wm.wasm  nice_key_gen_bg-HGZLgYOu.wasm
docs/assets/: index-Cmbthxvz.js
src/: lib.rs  main.rs  wasm.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.js  style.css
